// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent should create the app 1`] = `
<app-root
  title={[Function String]}
>
  
      <div
    _ngcontent-c0=""
    style="text-align:center"
  >
    
        
    <h1
      _ngcontent-c0=""
    >
      
          Welcome to 
    </h1>
    
        
    <img
      _ngcontent-c0=""
      alt="Angular Logo"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNTAgMjUwIj4KICAgIDxwYXRoIGZpbGw9IiNERDAwMzEiIGQ9Ik0xMjUgMzBMMzEuOSA2My4ybDE0LjIgMTIzLjFMMTI1IDIzMGw3OC45LTQzLjcgMTQuMi0xMjMuMXoiIC8+CiAgICA8cGF0aCBmaWxsPSIjQzMwMDJGIiBkPSJNMTI1IDMwdjIyLjItLjFWMjMwbDc4LjktNDMuNyAxNC4yLTEyMy4xTDEyNSAzMHoiIC8+CiAgICA8cGF0aCAgZmlsbD0iI0ZGRkZGRiIgZD0iTTEyNSA1Mi4xTDY2LjggMTgyLjZoMjEuN2wxMS43LTI5LjJoNDkuNGwxMS43IDI5LjJIMTgzTDEyNSA1Mi4xem0xNyA4My4zaC0zNGwxNy00MC45IDE3IDQwLjl6IiAvPgogIDwvc3ZnPg=="
      width="300"
    />
    
      
  </div>
      <h2
    _ngcontent-c0=""
  >
    Here are some links to help you start: 
  </h2>
      <ul
    _ngcontent-c0=""
  >
    
        
    <li
      _ngcontent-c0=""
    >
      
          
      <h2
        _ngcontent-c0=""
      >
        
            
        <a
          _ngcontent-c0=""
          href="https://angular.io/tutorial"
          rel="noopener"
          target="_blank"
        >
          Tour of Heroes
        </a>
        
          
      </h2>
      
        
    </li>
    
        
    <li
      _ngcontent-c0=""
    >
      
          
      <h2
        _ngcontent-c0=""
      >
        
            
        <a
          _ngcontent-c0=""
          href="https://github.com/angular/angular-cli/wiki"
          rel="noopener"
          target="_blank"
        >
          CLI Documentation
        </a>
        
          
      </h2>
      
        
    </li>
    
        
    <li
      _ngcontent-c0=""
    >
      
          
      <h2
        _ngcontent-c0=""
      >
        
            
        <a
          _ngcontent-c0=""
          href="https://blog.angular.io/"
          rel="noopener"
          target="_blank"
        >
          Angular blog
        </a>
        
          
      </h2>
      
        
    </li>
    
      
  </ul>
    
</app-root>
`;

exports[`AppComponent should render title in a h1 tag 1`] = `
<app-root
  title={[Function String]}
>
  
      <div
    _ngcontent-c2=""
    style="text-align:center"
  >
    
        
    <h1
      _ngcontent-c2=""
    >
      
          Welcome to app!
        
    </h1>
    
        
    <img
      _ngcontent-c2=""
      alt="Angular Logo"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNTAgMjUwIj4KICAgIDxwYXRoIGZpbGw9IiNERDAwMzEiIGQ9Ik0xMjUgMzBMMzEuOSA2My4ybDE0LjIgMTIzLjFMMTI1IDIzMGw3OC45LTQzLjcgMTQuMi0xMjMuMXoiIC8+CiAgICA8cGF0aCBmaWxsPSIjQzMwMDJGIiBkPSJNMTI1IDMwdjIyLjItLjFWMjMwbDc4LjktNDMuNyAxNC4yLTEyMy4xTDEyNSAzMHoiIC8+CiAgICA8cGF0aCAgZmlsbD0iI0ZGRkZGRiIgZD0iTTEyNSA1Mi4xTDY2LjggMTgyLjZoMjEuN2wxMS43LTI5LjJoNDkuNGwxMS43IDI5LjJIMTgzTDEyNSA1Mi4xem0xNyA4My4zaC0zNGwxNy00MC45IDE3IDQwLjl6IiAvPgogIDwvc3ZnPg=="
      width="300"
    />
    
      
  </div>
      <h2
    _ngcontent-c2=""
  >
    Here are some links to help you start: 
  </h2>
      <ul
    _ngcontent-c2=""
  >
    
        
    <li
      _ngcontent-c2=""
    >
      
          
      <h2
        _ngcontent-c2=""
      >
        
            
        <a
          _ngcontent-c2=""
          href="https://angular.io/tutorial"
          rel="noopener"
          target="_blank"
        >
          Tour of Heroes
        </a>
        
          
      </h2>
      
        
    </li>
    
        
    <li
      _ngcontent-c2=""
    >
      
          
      <h2
        _ngcontent-c2=""
      >
        
            
        <a
          _ngcontent-c2=""
          href="https://github.com/angular/angular-cli/wiki"
          rel="noopener"
          target="_blank"
        >
          CLI Documentation
        </a>
        
          
      </h2>
      
        
    </li>
    
        
    <li
      _ngcontent-c2=""
    >
      
          
      <h2
        _ngcontent-c2=""
      >
        
            
        <a
          _ngcontent-c2=""
          href="https://blog.angular.io/"
          rel="noopener"
          target="_blank"
        >
          Angular blog
        </a>
        
          
      </h2>
      
        
    </li>
    
      
  </ul>
    
</app-root>
`;
